// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiAvatar allows a name composed entirely of whitespace 1`] = `
<div
  aria-label="aria-label"
  class="euiAvatar euiAvatar--m euiAvatar--user testClass1 testClass2 emotion-euiAvatar-user-m-uppercase-euiTestCss"
  data-test-subj="test subject string"
  role="img"
  style="background-color: rgb(97, 162, 255); color: rgb(0, 0, 0);"
  title="  "
>
  <span
    aria-hidden="true"
  >
      
  </span>
</div>
`;

exports[`EuiAvatar is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiAvatar euiAvatar--m euiAvatar--user testClass1 testClass2 emotion-euiAvatar-user-m-uppercase-euiTestCss"
  data-test-subj="test subject string"
  role="img"
  style="background-color: rgb(238, 114, 166); color: rgb(0, 0, 0);"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props casing capitalize is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-user-m-capitalize"
  role="img"
  style="background-color: rgb(238, 114, 166); color: rgb(0, 0, 0);"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props casing lowercase is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-user-m-lowercase"
  role="img"
  style="background-color: rgb(238, 114, 166); color: rgb(0, 0, 0);"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props casing none is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-user-m-none"
  role="img"
  style="background-color: rgb(238, 114, 166); color: rgb(0, 0, 0);"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props casing uppercase is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-user-m-uppercase"
  role="img"
  style="background-color: rgb(238, 114, 166); color: rgb(0, 0, 0);"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props color as null is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-user-m-uppercase"
  role="img"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props color as plain is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-user-m-uppercase-plain"
  role="img"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props color as string is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-user-m-uppercase"
  role="img"
  style="background-color: rgb(0, 0, 0); color: rgb(255, 255, 255);"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props color as subdued is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-user-m-uppercase-subdued"
  role="img"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props iconType and iconColor as null is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-user-m-uppercase"
  role="img"
  style="background-color: rgb(238, 114, 166); color: rgb(0, 0, 0);"
  title="name"
>
  <span
    class="euiAvatar__icon"
    data-euiicon-type="bolt"
  />
</div>
`;

exports[`EuiAvatar props iconType and iconColor is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-user-m-uppercase"
  role="img"
  style="background-color: rgb(238, 114, 166); color: rgb(0, 0, 0);"
  title="name"
>
  <span
    class="euiAvatar__icon"
    color="primary"
    data-euiicon-type="bolt"
  />
</div>
`;

exports[`EuiAvatar props iconType and iconSize is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-user-m-uppercase"
  role="img"
  style="background-color: rgb(238, 114, 166); color: rgb(0, 0, 0);"
  title="name"
>
  <span
    class="euiAvatar__icon"
    color="#000000"
    data-euiicon-type="bolt"
  />
</div>
`;

exports[`EuiAvatar props iconType is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-user-m-uppercase"
  role="img"
  style="background-color: rgb(238, 114, 166); color: rgb(0, 0, 0);"
  title="name"
>
  <span
    class="euiAvatar__icon"
    color="#000000"
    data-euiicon-type="bolt"
  />
</div>
`;

exports[`EuiAvatar props imageUrl is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-user-m-uppercase"
  role="img"
  style="background-image: url(image-url.gif);"
  title="name"
/>
`;

exports[`EuiAvatar props initials is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-user-m-uppercase"
  role="img"
  style="background-color: rgb(238, 114, 166); color: rgb(0, 0, 0);"
  title="name"
>
  <span
    aria-hidden="true"
  >
    lo
  </span>
</div>
`;

exports[`EuiAvatar props initialsLength is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-user-m-uppercase"
  role="img"
  style="background-color: rgb(238, 114, 166); color: rgb(0, 0, 0);"
  title="name"
>
  <span
    aria-hidden="true"
  >
    na
  </span>
</div>
`;

exports[`EuiAvatar props isDisabled is rendered 1`] = `
<div
  class="euiAvatar euiAvatar--m euiAvatar--user euiAvatar-isDisabled emotion-euiAvatar-user-m-uppercase-isDisabled"
  role="presentation"
  style="background-color: rgb(238, 114, 166); color: rgb(0, 0, 0);"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props size l is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--l euiAvatar--user emotion-euiAvatar-user-l-uppercase"
  role="img"
  style="background-color: rgb(238, 114, 166); color: rgb(0, 0, 0);"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props size m is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--user emotion-euiAvatar-user-m-uppercase"
  role="img"
  style="background-color: rgb(238, 114, 166); color: rgb(0, 0, 0);"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props size s is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--s euiAvatar--user emotion-euiAvatar-user-s-uppercase"
  role="img"
  style="background-color: rgb(238, 114, 166); color: rgb(0, 0, 0);"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props size xl is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--xl euiAvatar--user emotion-euiAvatar-user-xl-uppercase"
  role="img"
  style="background-color: rgb(238, 114, 166); color: rgb(0, 0, 0);"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;

exports[`EuiAvatar props type is rendered 1`] = `
<div
  aria-label="name"
  class="euiAvatar euiAvatar--m euiAvatar--space emotion-euiAvatar-space-m-none"
  role="img"
  style="background-color: rgb(238, 114, 166); color: rgb(0, 0, 0);"
  title="name"
>
  <span
    aria-hidden="true"
  >
    n
  </span>
</div>
`;
